--- a/src/Conditions.Tests/App.config
+++ b/src/Conditions.Tests/App.config
@@ -1,15 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.diagnostics>
     <trace autoflush="false" indentsize="4">
       <listeners>
-        <clear />
-        <add name="Default" type="Conditions.Tests.UnitTestTraceListener, Conditions.Tests" />
+        <clear/>
+        <add name="Default" type="Conditions.Tests.UnitTestTraceListener, Conditions.Tests"/>
       </listeners>
     </trace>
   </system.diagnostics>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/>
   </startup>
 </configuration>
